# elgato-control-center

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
src/: controlcenter.rs  jrpc.rs  main.rs
